spec/e2e/variable/undefined_local.lit
{
  println(not_defined ) # error: [line 2] Runtime error: Undefined variable 'not_defined'.
}
